refactor: file-based screenshots, drop ThreadLocal, run tests sequentially
Per project convention:
- ScreenshotUtils now uses TakesScreenshot.getScreenshotAs(OutputType.FILE)
  + Files.copy, saving to <user.dir>/screenshots/ with pattern
  <name>_<timestamp>.png. Removed the byte[] path entirely.
- DriverFactory drops ThreadLocal<WebDriver> and uses a single static
  WebDriver field.
- ExtentManager drops ThreadLocal<ExtentTest>; screenshots now attach via
  MediaEntityBuilder.createScreenCaptureFromPath (file path), not base64
  bytes.
- Hooks no longer passes byte[] anywhere — it calls ScreenshotUtils.capture
  and forwards the returned path to ExtentManager.
- testng.xml: parallel="none" (Chrome runs all 10 scenarios, then Edge).
  Required because a single static driver cannot be shared safely across
  parallel threads.
- TestListener clean-up path moved from reports/extent/screenshots/ to
  screenshots/ to match new location.